# S3_C_projet

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  FIND_TODOS.bat  FindSphinx.cmake  GAConfig.cmake.in  LICENSE  README.md  RUN_CCLINT.bat  conf.py.in  ga.c  ga.h  ga.inc  run-clang-format.py  test-copy-clone.c  test-create-destroy.c  test-file.c  test-init-finish.c  test-to-string.c  test.c  test.h  test_docs.py
.github/workflows/: build.yaml
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  api.rst  conf.py  ga.rst  index.rst  presentation.rst  psrc.rst  psrc.rst.OLD  sudoku.rst  test.rst
examples/: irregular_size_1.yaml  irregular_size_2.yaml  null.yaml  oversize.yaml  teacher.yaml  three_by_three.yaml  worst.yaml
src/: Doxyfile
src/ga/: CMakeLists.txt  ga.c  ga.inc
src/ga/includes/: ga.h
src/sudoku/: CMakeLists.txt  main.c  sudoku.c  sudoku.inc
src/sudoku/includes/: sudoku.h
test/: CMakeLists.txt
test/ga/: CMakeLists.txt  test-copy-clone.c  test-create-destroy.c  test-crossover.c  test-crossover_2.c  test-file.c  test-fortune-wheel.c  test-individual.c  test-init-finish.c  test-mutate.c  test-next.c  test-population-destroy.c  test-population-get-generator.c  test-population-get-set-gene.c  test-population-size.c  test-to-string.c
test/sudoku/: CMakeLists.txt  test-evaluate.c  test-fill-sudoku.c  test-read-sudoku.c  test-sudoku-get-dim-size.c
